--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
-    "build": "npm install"
+    "build": "npm install",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
